--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,14 @@
 <head></head>
 <body>
 Вы находитесь на первой странице проекта Скай-Скул<br/><br/>
-
+<H1>
 Вас зовут = {{ user }}
-
+</H1>
 <br/>
 {% if request.user.is_authenticated  %}
-Вы активный зарегистрированный пользователь
+Вы активный зарегистрированный пользователь - и у вас есть свой
+<a href='/my_room/'>личный кабинет</a>
+ <hr>
 <a href="/logout/">LOGOUT</a>
 {% else %}
 Сейчас вы неизвестно кто.<br/>
