--- a/templates/my_room.html
+++ b/templates/my_room.html
@@ -10,9 +10,9 @@
 <h2>{{ user.get_full_name }}</h2>
 <ul>
   <li>Username: {{ user.username }}</li>
-  <li>Location: {{ user.profile.location }}</li>
-  <li>Birth Date: {{ user.profile.birth_date }}</li>
-  <li>Bio: {{ user.profile.bio }}</li>
+  <li>Location: {{ user.userprofile.location }}</li>
+  <li>Birth Date: {{ user.userprofile.birth_date }}</li>
+  <li>Bio: {{ user.userprofile.bio }}</li>
 </ul>
 
 </body>
