--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -4,7 +4,7 @@
 <title>edit_profile</title>
 </head>
 <body>
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ user_form.as_p }}
     {{ profile_form.as_p }}
