site url and show pic

--- a/templates/hall.html
+++ b/templates/hall.html
@@ -15,5 +15,9 @@
 <li>Изучать стили обучения (попросить статус Психолога)</li>
 <li>Подобрать себе сотрудников (попросить статус Охотника)</li>
 </ul>
+
+Если вы просите статус выше студенческого, заполнните данные в личном кабинете,
+ включая биографию и фото. Решение о вашем новом статусе будет принимать человек
+  на основе этих данных
 </body>
 </html>
