--- a/templates/hall.html
+++ b/templates/hall.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>hall</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
   <h1>
 Вы находитесь в главном зале проекта
 </h1>
@@ -19,5 +15,4 @@
 Если вы просите статус выше студенческого, заполнните данные в личном кабинете,
  включая биографию и фото. Решение о вашем новом статусе будет принимать человек
   на основе этих данных
-</body>
-</html>
+{% endblock %}
