--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,18 @@
     </head>
 
     <body>
+      <a href="/">Домой</a>
+      <hr>
     {% block content %}{% endblock content %}
+    <hr>
+    {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                {{ message }}
+            </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
     </body>
 </html>
