--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>edit_profile</title>
-</head>
-<body>
-  <form method="post" enctype="multipart/form-data">
+{% extends "base.html" %}
+{% block content %}
+
+  <form method="post" >
     {% csrf_token %}
-    {{ user_form.as_p }}
-    {{ profile_form.as_p }}
+    <table>
+    {{ user_form.as_table }}
+    {{ profile_form.as_table }}
+    </table>
     <button type="submit">Save changes</button>
+
   </form>
   (Birth Date = YYYY-MM-DD or DD.MM.YYYY)
-</body>
-</html>
+  <a href="/edit_pic/">Редактировать фото</a>
+{% endblock %}
