--- a/templates/hall.html
+++ b/templates/hall.html
@@ -1,18 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>
-Вы находитесь в главном зале проекта
+Вы находитесь в главном зале проекта. Сейчас вы {{user.userprofile.get_status}}
 </h1>
-Вы можете
-<ul>
-<li>Записаться на курс и приступить к изучению</li>
-<li>Создать собственный курс (попросить статус Эксперта)</li>
-<li>Наблюдать движение студентов (попросить статус Тьютора)</li>
-<li>Изучать стили обучения (попросить статус Психолога)</li>
-<li>Подобрать себе сотрудников (попросить статус Охотника)</li>
-</ul>
+(S = студент, E = эксперт, T = тьютор)<p>
 
-Если вы просите статус выше студенческого, заполнните данные в личном кабинете,
- включая биографию и фото. Решение о вашем новом статусе будет принимать человек
-  на основе этих данных
+
+<form method="post" action="/get_status/"
+>{% csrf_token %}
+Попросить другую роль
+        <select name="role">
+          <option value="S">student</option>
+          <option value="E">expert</option>
+          <option value="T">tutor</option>
+        </select>
+
+    <input type="submit" value="Submit" />
+</form>
+
 {% endblock %}
