--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
 
     <body>
       <a href="/">Домой</a>
+      {% if user.is_superuser %}
+        <a href="/admin/">Admin-panel</a>
+      {% endif %}
       <hr>
     {% block content %}{% endblock content %}
     <hr>
