--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,36 @@
 <html>
     <head>
         <title>sky</title>
+        <meta charset="utf-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
 
     <body>
-      <a href="/">Домой</a>
-      {% if user.is_superuser %}
-        <a href="/admin/">Admin-panel</a>
-      {% endif %}
-      <hr>
-    {% block content %}{% endblock content %}
-    <hr>
+      <div class="container">
+        <div class="jumbotron">
+
+
+
+
+                <a href="/" title="Home">
+                    <span class="glyphicon glyphicon-home"></span>
+                </a>
+              <hr>
+              {% block content %}
+              {% endblock content %}
+
+              <hr>
+              {% if user.is_superuser %}
+                <a href="/admin/" title="Admin-panel">
+                    <span class="glyphicon glyphicon-wrench"></span>
+                </a>
+              {% endif %}
+        </div>
+      </div>
+
     {% if messages %}
       <ul class="messages">
         {% for message in messages %}
@@ -21,5 +41,6 @@
         {% endfor %}
       </ul>
     {% endif %}
+
     </body>
 </html>
