--- a/templates/hall.html
+++ b/templates/hall.html
@@ -17,19 +17,66 @@
 <hr>
 
 {% if user.userprofile.last_status == 'S' %}
- <a href="/all_courses/"> все курсы </a>
- <hr>
- Мои курсы
+  Мои курсы - Активные
  <ol>
-   {% for obj in qset %}
-   <li>{{ obj }}</li>
+   {% for obj in qset1 %}
+   <li>
+     <a href="/crs_rec/{{obj.id}}/">
+     {{ obj }}
+   </a>
+     <a href="/crs_down/{{obj.id}}/">
+   <span class="glyphicon glyphicon-arrow-down"></span>
+    </a>
+ </li>
    {% endfor %}
  </ol>
-
+ <hr>
+ Мои курсы - Пассивные
+<ol>
+  {% for obj in qset2 %}
+  <li>{{ obj }}
+     <a href="/crs_up/{{obj.id}}/">
+  <span class="glyphicon glyphicon-arrow-up"></span>
+  </a>
+</li>
+  {% endfor %}
+</ol>
+<hr>
+Все остальные курсы
+<ol>
+  {% for obj in qset4 %}
+  <li>
+    <a href="/crs_demo/{{obj.id}}/">
+    {{ obj }}
+  </a>
+     <a href="/crs_up/{{obj.id}}/">
+  <span class="glyphicon glyphicon-arrow-up"></span>
+</a>
+</li>
+  {% endfor %}
+</ol>
 {% elif user.userprofile.last_status == 'E' %}
 <a href="/create_crs/">создать курс</a>
 <hr>
-Мои курсы
+Мои курсы - Одобренные
+<ol>
+  {% for obj in qset %}
+  <li><a href="/course/{{obj.id}}">{{ obj }}</a>
+  {% endfor %}
+</ol>
+Мои курсы - Завершенные
+<ol>
+  {% for obj in qset %}
+  <li><a href="/course/{{obj.id}}">{{ obj }}</a>
+  {% endfor %}
+</ol>
+Мои курсы - начатые
+<ol>
+  {% for obj in qset %}
+  <li><a href="/course/{{obj.id}}">{{ obj }}</a>
+  {% endfor %}
+</ol>
+Курсы других преподавателей
 <ol>
   {% for obj in qset %}
   <li><a href="/course/{{obj.id}}">{{ obj }}</a>
