--- a/templates/student/enrolled.html
+++ b/templates/student/enrolled.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<h1>{{ course }}</h1>
 Started {{ started }}
 <hr>
 <a href="/hall/">Вернуться в главный зал</a>
