--- a/templates/student/crs_demo.html
+++ b/templates/student/crs_demo.html
@@ -11,7 +11,7 @@
 <ol start="0">
   {% for lec in lec_05 %}
   <li>
- {{ lec }} <br />
+ <b>{{ lec }}</b> <br />
       {{ lec.txt }}
       </li>
       </ul>
