--- a/templates/lecture/exam_pic_form.html
+++ b/templates/lecture/exam_pic_form.html
@@ -5,7 +5,7 @@
 <h3>Экзамен: {{ inout }}/Вопрос {{ number }}</h3>
 
 
-  <form 
+  <form enctype="multipart/form-data"
    method="post" >{% csrf_token %}
     {{ form.as_p }}
       <input type="submit" value="Submit" />
