--- a/templates/edit_pic.html
+++ b/templates/edit_pic.html
@@ -2,12 +2,10 @@
 {% block content %}
 
 
-  <form 
-   method="post" enctype="multipart/form-data">{% csrf_token %}
-      <p>
-          <input id="id_image" type="file" class="" name="image">
-      </p>
-      <input type="submit" value="Submit" />
-  </form>
+<form enctype="multipart/form-data"
+ method="post" >{% csrf_token %}
+  {{ form.as_p }}
+    <input type="submit" value="Submit" />
+</form>
 
 {% endblock %}
