--- a/templates/student/crs_rec.html
+++ b/templates/student/crs_rec.html
@@ -1,22 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
 <h3>Курс:</h3>
-<h2>{{course}}
+<h2>
   <a href="{{course.slides}}" target="1" title="slides">
   <span class="glyphicon glyphicon-blackboard"></span>
+  </a>
+  {{course}}
+  <a href="/show_video/{{course.id}}/{{lec}}/" target="1" title="long video">
+  <span class="glyphicon glyphicon-facetime-video"></span>
   </a>
 </h2>
 <hr>
 <h3>Лекции</h3>
-<ol start="0">
-  {% for lec in lec_05 %}
+<ol>
+  {% for lec in lec_15 %}
   <li>
- {{ lec }} 
-      </li>
-      </ul>
+ {{ lec }}
+
   </li>
   {% endfor %}
 </ol>
+<hr>
+<h3>{{current}}</h3>
+<a href="/rec2page/{{rec_id}}/">Продолжить движение</a>
 <hr>
 <a href="/hall/">Вернуться в главный зал</a>
 {% endblock %}
