--- a/templates/hall.html
+++ b/templates/hall.html
@@ -8,6 +8,7 @@
 >{% csrf_token %}
 Попросить другую роль
         <select name="role">
+          <option value="S">-------</option>
           <option value="S">student</option>
           <option value="E">expert</option>
           <option value="T">tutor</option>
