--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                           <span class="glyphicon glyphicon-knight"></span>
                       </a>
 
-                      (<a href="/tut/s2t/" title="Student needs Tutor">
+                      (<a href="/tut/s2t/" title="Student seeks Tutor">
                           <span class="glyphicon glyphicon-tower"></span>
                       </a>)
 
@@ -47,7 +47,7 @@
                           <span class="glyphicon glyphicon-tower"></span>
                       </a>
                       (
-                      <a href="/tut/t2s/" title="Tutor needs Student">
+                      <a href="/tut/t2s/" title="Tutor seeks Students">
                           <span class="glyphicon glyphicon-knight"></span>
                       </a>)
                 {% endif %}
