--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html>
-<head></head>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  </head>
 <body>
-  {% if user.is_superuser %}
-    <a href="/admin/">Admin-panel</a>
-    <hr>
-  {% endif %}
+
+  <div class="container">
+    <div class="jumbotron">
+      {% if user.is_superuser %}
+        <a href="/admin/">Admin-panel</a>
+        <hr>
+      {% endif %}
 Вы находитесь на первой странице проекта Скай-Скул<br/><br/>
 <H1>
 Вас зовут = {{ user }}
@@ -26,5 +38,95 @@
 или войдите в систему:
 <a href="/login/">LOGIN</a>
 {% endif %}
+</div>
+</div>
+
+<div class="container">
+  <div class="jumbotron">
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="http://hbtjournal.com/h/img1/1.jpg" alt="1">
+
+      <div class="carousel-caption">
+        1
+      </div>
+
+    </div>
+    <div class="item">
+      <img src="http://hbtjournal.com/h/img1/2.jpg" alt="2">
+      <div class="carousel-caption">
+        2
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="http://hbtjournal.com/h/img1/3.jpg" alt="3">
+      <div class="carousel-caption">
+        2
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://hbtjournal.com/h/img1/4.jpg" alt="4">
+      <div class="carousel-caption">
+        2
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://hbtjournal.com/h/img1/5.jpg" alt="5">
+      <div class="carousel-caption">
+        2
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://hbtjournal.com/h/img1/6.jpg" alt="6">
+      <div class="carousel-caption">
+        2
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://hbtjournal.com/h/img1/7.jpg" alt="7">
+      <div class="carousel-caption">
+        2
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://hbtjournal.com/h/img1/8.jpg" alt="8">
+      <div class="carousel-caption">
+        2
+      </div>
+    </div>
+
+
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+</div>
+</div>
 </body>
 </html>
