--- a/templates/book_search.html
+++ b/templates/book_search.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<h3>Ищем курс по ключевым словам</h3>
+<h3>Ищем курс</h3>
 <form
  method="post" >{% csrf_token %}
  <table>
   {{ form.as_table }}
 </table>
     <input type="submit" value="Submit" />
-
 </form>
 <hr>
 Результаты последнего поиска
@@ -15,6 +14,16 @@
   {% for obj in qset %}
   <li>
     {{obj}}
+{% if user.userprofile.last_status == 'A' %}
+    (
+    <a href="/arc/c2c/{{obj.id}}/" title="Set categories to course">
+        <span class="glyphicon glyphicon-book"></span>
+        <span class="glyphicon glyphicon-flag"></span>
+    </a>
+
+    )
+{% endif %}
+
   </li>
   {% endfor %}
 </ol>
